feat: add points management APIs with request and database logging (#5)
* add: logging on HTTP Request

* feat: add points management API and member reward breakdown endpoints
