# internal/handler/http.go
@@ -153,3 +153,129 @@ func (h *HTTPHandler) GetMemberRewards(w http.ResponseWriter, r *http.Request) {
 	}
 	respondWithJSON(w, http.StatusOK, entries)
 }
+
+func (h *HTTPHandler) GetAllMembers(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	members, err := h.service.GetAllMembers(ctx)
+	if err != nil {
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+	}
+
+	respondWithJSON(w, http.StatusOK, members)
+}
+
+func (h *HTTPHandler) GetAllRewards(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	rewards, err := h.service.GetAllRewards(ctx)
+	if err != nil {
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+	}
+
+	respondWithJSON(w, http.StatusOK, rewards)
+}
+
+func (h *HTTPHandler) GetMemberWithPointCategory(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	memberId, err := strconv.Atoi(chi.URLParam(r, "memberId"))
+	if err != nil {
+		respondWithError(w, r, http.StatusBadRequest, "Invalid member ID format")
+	}
+
+	memberWithPointCategory, err := h.service.GetMemberWithPointCategory(ctx, memberId)
+	if err != nil {
+		if errors.Is(err, domain.ErrMemberNotFound) {
+			respondWithError(w, r, http.StatusNotFound, err.Error())
+			return
+		}
+		if errors.Is(err, domain.ErrRewardNotFound) {
+			respondWithError(w, r, http.StatusNotFound, err.Error())
+			return
+		}
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+
+	respondWithJSON(w, http.StatusOK, memberWithPointCategory)
+}
+
+func (h *HTTPHandler) CreatePoint(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var input struct {
+		PointTypeID int    `json:"point_type_id"`
+		PointCode   string `json:"point_code"`
+	}
+	if err := json.NewDecoder(r.Body).Decode(&input); err != nil || input.PointTypeID < 1 || input.PointCode == "" {
+		respondWithError(w, r, http.StatusBadRequest, "Invalid input.")
+		return
+	}
+
+	m, err := h.service.CreatePoint(ctx, input.PointTypeID, input.PointCode)
+	if err != nil {
+		if errors.Is(err, domain.ErrDuplicatePointTypeID) {
+			respondWithError(w, r, http.StatusConflict, err.Error())
+			return
+		}
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+	respondWithJSON(w, http.StatusCreated, m)
+}
+
+func (h *HTTPHandler) GetPointDetailsByPointType(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	idStr := chi.URLParam(r, "pointTypeId")
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		respondWithError(w, r, http.StatusBadRequest, "Invalid point type ID format")
+		return
+	}
+
+	point, err := h.service.GetPointDetailsByPointType(ctx, id)
+	if err != nil {
+		if errors.Is(err, domain.ErrPointNotFound) {
+			respondWithError(w, r, http.StatusNotFound, err.Error())
+			return
+		}
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+	respondWithJSON(w, http.StatusOK, point)
+}
+
+func (h *HTTPHandler) GetAllPoints(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	points, err := h.service.GetAllPoints(ctx)
+	if err != nil {
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+	respondWithJSON(w, http.StatusOK, &points)
+}
+
+func (h *HTTPHandler) ActivatePoint(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var input struct {
+		PointTypeID int `json:"point_type_id"`
+	}
+	if err := json.NewDecoder(r.Body).Decode(&input); err != nil {
+		respondWithError(w, r, http.StatusBadRequest, "Invalid input.")
+		return
+	}
+
+	point, err := h.service.ActivatePoint(ctx, input.PointTypeID)
+	if err != nil {
+		if errors.Is(err, domain.ErrPointNotFound) {
+			respondWithError(w, r, http.StatusNotFound, err.Error())
+			return
+		}
+		respondWithError(w, r, http.StatusInternalServerError, "Internal server error")
+		return
+	}
+	respondWithJSON(w, http.StatusOK, &point)
+}
